tests/regression/errors/basic/syntax_error_9.csd
// Syntax error test 9 - missing semicolon
sus x drip = 9
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
